<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/first_fragment" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/second_fragment" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/line1"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/line_1" />
            <item
                android:id="@+id/line2"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/line_2" />
            <item
                android:id="@+id/line3"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/line_3" />
            <item
                android:id="@+id/line4"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/line_4" />
        </menu>
    </item>

</menu>
